# lasercontrol

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  fade  fade.cpp.backup  lasercontrol  main.cpp  main.h  make_and_run.sh  spi-test.py  spi.cpp  spi.cpp.backup  spi.h
lasercontrol_qt/: lasercontrol_qt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  spi.cpp
